# jimmy_clipboard

./: Cargo.toml  README.md
src/: main.rs
tests/: test_data.csv
