[package]
name = "jimmy_clipboard"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
overflow-checks = true


[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.218", default-features = false, features = ["alloc", "std"] }
serde_derive = "1.0.218"
